修改:读取时使用数组代替列表